--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -12,6 +12,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-color: #86AAD4;
+    border-radius: 10px;
+    padding: 10px;
    
 }
 
