--- a/src/components/TextField/TextField.css
+++ b/src/components/TextField/TextField.css
@@ -1,13 +1,15 @@
 .label{
     display: block;
     font-size: 16px;
+    padding: 2px;
 }
 .input{
-    background-color: blueviolet;
+    background-color: rgb(255, 255, 255);
     box-shadow: 5px 5px 5px 5px rgba(166, 76, 236, 0.1);
     width: 100%;
     border: none;
     padding: 10px;
     box-sizing: border-box;
     font-size: 16px;
+    border-radius: 10px;
 }
