--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -6,4 +6,9 @@
     margin: 20px 0px;
     padding: 5px;
     width: 20%;
+    border: none;
+    box-shadow: 5px 5px 5px 5px rgba(166, 76, 236, 0.1);
+}
+.button-container:hover{
+    background-color: pink;
 }
