--- a/src/components/TextField/TextField.css
+++ b/src/components/TextField/TextField.css
@@ -1,7 +1,6 @@
 .label{
     display: block;
     font-size: 16px;
-    padding: 2px;
 }
 .input{
     background-color: rgb(255, 255, 255);
@@ -12,5 +11,10 @@
     box-sizing: border-box;
     font-size: 16px;
     border-radius: 10px;
+}
+.text-field-container{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
